Breadcrumb mobile overflow fix, plus color tweak

--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -48,22 +48,22 @@ a {
   position: absolute;
   padding: 0px 16px !important;
   top: 112px;
-  left: 16px;
-  white-space: nowrap; 
-  width: 100%; 
+  left: 0px;
+  white-space: nowrap;
+  width: 100%;
   overflow: hidden;
-  text-overflow: ellipsis; 
+  text-overflow: ellipsis;
   display: block !important;
-  list-style-type: none !important;
-}
-
-.v-breadcrumbs__item {
-  color: var(--v-primary-base) !important;
-  display: inline-block !important;
-}
-
-.v-breadcrumbs__item--disabled{
- color: #e0e0e0 !important;
+  li {
+    display: inline !important;
+    .v-breadcrumbs__item {
+      color: var(--v-primary-lighten3) !important;
+      display: inline !important;
+      &.v-breadcrumbs__item--disabled {
+        color: #e0e0e0 !important;
+      }
+    }
+  }
 }
 
 // page sections
